# fake-books

./: .gitignore  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/auth/: router.py  schemas.py  services.py  utils.py
backend/books/: router.py
backend/catalog/: models.py
backend/migrations/: env.py
backend/migrations/versions/: 94c17cf02d56_create_for_book_models.py  d499bd679d26_initial_migrations.py
backend/src/: config.py  database.py  redis.py
backend/users/: dependencies.py  models.py  router.py  schemas.py  services.py
